# ZigZag

./: .gitignore  CHANGES.txt  PYPI_PREP_PLAN.md  Pipfile  README.md  build.bash  pyproject.toml  requirements.txt  test_core.py  test_plain_python.py
.github/workflows/: build-and-test-python.yml
zigzag/: __init__.py  core.py
zigzag_dt/: __init__.py  core.py  plotting.py
