[project]
name = "zigzag"
version = "0.3.3"
readme = "README.md"
description = "Package for finding peaks and valleys of time series."
authors = [ 
  { name = "generativist" , email = "jbn@abreka.com"}
  ]
	
	maintainers = [
  {name = "Alex", email = "alex@lexema.com.au"}
]

license ="BSD-3-Clause"
#licensefiles =[ "LICENCE.txt" ]
#readme = "README.md"
dependencies = [
	    "numpy>= 1.21.1",
	    "pandas>=2.3.1",
]
requires-python = ">=3.8"


[build-system]
    requires = [
      "setuptools",
	    "numpy",
	    "pandas",
    ]
    build-backend = "setuptools.build_meta"
[project.optional-dependencies]
	  cli=[  "matplotlib >=3.10.6"]

[project.urls]
    Homepage = "https://github.com/jbn/ZigZag"
    Documentation = "https://github.com/jbn/ZigZag"
    Issues = "https://github.com/Alex-Glebov/ZigZag/issues"
    repository = "https://github.com/jbn/ZigZag"
    homepage = "https://github.com/jbn/ZigZag"
    Changelog = "https://github.com/jbn/ZigZag/CHANGELOG.md"
    Repository = "https://github.com/Alex-Glebov/ZigZag.git"

    
