[project]
name = "zigzag"
version = "0.3.5"
readme = "README.md"
description = "Package for finding peaks and valleys in array or series."
authors = [ 
  { name = "generativist" , email = "jbn@abreka.com"}
  { name = "Alex",          email = "alex@lexema.com.au"}
  ]
	
maintainers = [
  {name = "Alex",           email = "alex@lexema.com.au"}
]

license ="BSD-3-Clause"
#licensefiles =[ "LICENCE.txt" ]
dependencies = [
	    "numpy>= 1.21.1",
	    "pandas>=2.3.1",
]
requires-python = ">=3.8"


[build-system]
    requires = [
		"setuptools",
    	"numpy",
	    "pandas",
    ]
    build-backend = "setuptools.build_meta"
[project.optional-dependencies]
	  cli=[  "matplotlib >=3.10.6"]

[project.urls]
    Homepage      = "https://github.com/Alex-Glebov/ZigZag"
    Documentation = "https://github.com/Alex-Glebov/ZigZag"
    Issues        = "https://github.com/Alex-Glebov/ZigZag/issues"
    repository    = "https://github.com/Alex-Glebov/ZigZag"
    Changelog     = "https://github.com/Alex-Glebov/ZigZag/CHANGELOG.md"
    Repository    = "https://github.com/Alex-Glebov/ZigZag.git"

    
